--- a/ressources/css/cv.css
+++ b/ressources/css/cv.css
@@ -1,6 +1,7 @@
 .cv {
 	font-family: arial;
-	padding-left: 5%
+	padding-left: 5%;
+	padding-right: 5%;
 }
 
 .cv .intro ul {
@@ -61,13 +62,15 @@ hr {
 	background-color: rgb(211, 199, 251, 0.3);
 	border-radius: 15px;
 	z-index: -10;
+	margin-bottom: 20px;
+	box-shadow: 7px 7px 2px #ccc;
 }
 
 .box_info .poste {
 	padding-top: 5px;
-	padding-left: 5%;
+	padding-left: 2.5%;
 	float: left;
-	width: 95%;
+	width: 97.5%;
 	height: 35px;
 	font-weight: bold;
 	font-size: 23px;
@@ -97,4 +100,13 @@ hr {
 .box_info .logo_spacebel {
 	height: 50px;
 	color: #000;
+}
+
+.box_info .date, .lieu {
+	font-size: 14px;
+	color: #555;
+}
+
+.box_info .competences {
+	font-weight: bold;
 }
