--- a/ressources/css/cv.css
+++ b/ressources/css/cv.css
@@ -37,7 +37,7 @@
 
 hr {
 	position: relative;
-	left: 3%;
+	left: 2%;
 	z-index: -10;
 }
 
@@ -89,6 +89,11 @@ hr {
 	color: #2c82c9;
 }
 
+.link:hover {
+	color: #36a2eb;
+	font-weight: bold;
+}
+
 .box_info img {
 	position: relative;
 	float: right;
@@ -109,4 +114,19 @@ hr {
 
 .box_info .competences {
 	font-weight: bold;
+}
+
+ul .reseaux_bloc {
+	text-align: left;
+	width: 50%;
+}
+
+.cv .reseaux {
+	list-style-type: none;
+	display: inline-block;
+	padding-left: 10px;
+}
+
+.reseaux img {
+	height: 35px;
 }
