--- a/ressources/css/cv.css
+++ b/ressources/css/cv.css
@@ -134,18 +134,20 @@ ul .reseaux_bloc {
 .box_info .langue {
 	position: relative;
 	top: -8px;
-	right: 95%;
+	right: 98%;
 	height: 35px;
+	width: 35px;
 }
 
 .box_info .niveau {
 	position: relative;
-	left: 30%;
+	left: 15%;
 }
 
 .box_info .etoile {
 	position: relative;
-	right: 70%;
+	right: 85%;
 	top: -4px;
 	height: 25px;
+	width: 25px;
 }
