--- a/ressources/css/contact.css
+++ b/ressources/css/contact.css
@@ -92,7 +92,7 @@ h2 {
     background-color: #ffbaba;
 }
 
-.img_mail {
+.imgages .img_mail {
     position: relative;
     width: 50px;
     padding-left: 30%;
