--- a/ressources/css/main.css
+++ b/ressources/css/main.css
@@ -1,4 +1,17 @@
 body {
-	padding: 0;
-	margin: 0;
+    font-family: arial;
+}
+
+.content {
+    position: absolute;
+    padding-left: 7%;
+    padding-top: 1%;
+    top: 0;
+    z-index: -1;
+}
+
+.titre {
+	font-size: 50px;
+	color: #1f108b;
+	font-weight: bold;
 }
